video player, overlay ui

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
 <div role="main" class="main">
 
+    <div id="overlay"></div>
+
     <section id="section-hero" class="page-section section nomargin dark bg-stringlabs" data-href="#section-work">
         <div class="heading-block">
             <h2>{% t index.hero-title %}</h2>
@@ -128,7 +130,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                 <div class="container pull-left">
                     <div class="row">
                         <div class="media-item pull-left">
-                            <div class="feature-box media-box">
+                            <div class="feature-box media-box" data-video-url="https://www.youtube.com/embed/DP8X-NuG4z0">
                                 <div class="fbox-desc center">
                                     <h4>{% t index.dfinity-brief-tour-video %}</h4>
                                     <div>▶</div>
@@ -136,7 +138,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                             </div>
                         </div>
                         <div class="media-item pull-left">
-                            <div class="feature-box media-box">
+                            <div class="feature-box media-box" data-video-url="https://www.youtube.com/embed/DP8X-NuG4z0">
                                 <div class="fbox-desc center">
                                     <h4>{% t index.dfinity-brief-tour-video %}</h4>
                                     <div>▶</div>
@@ -144,7 +146,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                             </div>
                         </div>
                         <div class="media-item pull-left">
-                            <div class="feature-box media-box">
+                            <div class="feature-box media-box" data-video-url="https://www.youtube.com/embed/DP8X-NuG4z0">
                                 <div class="fbox-desc center">
                                     <h4>{% t index.dfinity-brief-tour-video %}</h4>
                                     <div>▶</div>
@@ -154,7 +156,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                     </div>
                     <div class="row">
                         <div class="media-item pull-left">
-                            <div class="feature-box media-box">
+                            <div class="feature-box media-box" data-video-url="https://www.youtube.com/embed/DP8X-NuG4z0">
                                 <div class="fbox-desc center">
                                     <h4>{% t index.dfinity-brief-tour-video %}</h4>
                                     <div>▶</div>
@@ -162,7 +164,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                             </div>
                         </div>
                         <div class="media-item pull-left">
-                            <div class="feature-box media-box">
+                            <div class="feature-box media-box" data-video-url="https://www.youtube.com/embed/DP8X-NuG4z0">
                                 <div class="fbox-desc center">
                                     <h4>{% t index.dfinity-brief-tour-video %}</h4>
                                     <div>▶</div>
@@ -170,7 +172,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                             </div>
                         </div>
                         <div class="media-item pull-left">
-                            <div class="feature-box media-box">
+                            <div class="feature-box media-box" data-video-url="https://www.youtube.com/embed/DP8X-NuG4z0">
                                 <div class="fbox-desc center">
                                     <h4>{% t index.dfinity-brief-tour-video %}</h4>
                                     <div>▶</div>
